Added some logos

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"displayName": "SyncOpener",
 	"description": "Link directories to open files of the same name with a single click.",
 	"publisher": "Pittawaydev",
-	"version": "0.0.1",
+	"version": "1.0.1",
 	"engines": {
 	  "vscode": "^1.87.0"
 	},
 	"categories": [
 	  "Other"
 	],
-	"icon": "icon.webp",
+	"icon": "SquareLogo.jpg",
 	"activationEvents": [
 	  "onLanguage:typescript",
 	  "onLanguage:javascript",
